--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>MAINTENANCE</title>
+        <title>MAINTENANCE!</title>
     </head>
     <body>
         <center><h1>MAINTENANCE MODE</h1>
