--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>MAINTENANCE!</title>
     </head>
     <body>
-        <center><h1>MAINTENANCE MODE</h1>
+        <center><h1>MAINTENANCE MODE!!!</h1>
         <h3>We are currently working on this website!</h3></center>
     </body>
 </html>
